[package]
name = "heroku_bot"
version = "0.1.0"
authors = ["Nullsanya <000sanya.000sanya@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tgbot = { path = "tgbot" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
act-zero = { version = "0.4.0", features = ["tokio"] }
log = "0.4.13"
env_logger = "0.8.2"
async-trait = "0.1.42"
pixiv_api = { path = "pixiv_api" }
envy = "0.4"
futures = "0.3.12"
regex = "1"
rvk = "0.20"
maplit = "1.0.2"
anyhow = "1.0.38"
reqwest = { version = "0.11", features = ["json"] }
itertools = "0.10"
rand = "0.8.2"

[workspace]
members = [
    "pixiv_api",
    "tgbot"
]