[package]
name = "heroku_bot"
version = "0.1.0"
authors = ["Nullsanya <000sanya.000sanya@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
warp = "0.3"
act-zero = { version = "0.4", features = ["tokio"] }
log = "0.4"
env_logger = "0.8"
async-trait = "0.1"
envy = "0.4"
futures = "0.3"
regex = "1"
rvk = "0.21"
maplit = "1.0"
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json", "cookies"] }
cookie = "0.14"
itertools = "0.10"
rand = "0.8"
teloxide-core = "0.3"
thiserror = "1.0"
image = "0.23"
chrono = "0.4"
md5 = "0.7"
serenity = { version = "0.11.1" }